[project]
name = "gtl"
version = "0.1.0"
description = "Game Theoretic Learning — a research engineering laboratory for turning papers into reproducible, tested implementations."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Jungyoon Lim" }]
keywords = [
    "game-theory",
    "reinforcement-learning",
    "multi-agent",
    "mechanism-design",
    "research",
]

# Runtime dependencies are deliberately minimal. The core library should be
# importable in any research environment without dragging in a heavy stack.
# Paper-specific dependencies live in each paper's own optional-dependency group.
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Everything a contributor needs to develop, test, and lint.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",     # property-based testing
    "ruff>=0.5",             # linting + formatting
    "mypy>=1.10",            # static type checking
    "pre-commit>=3.7",
]

[project.scripts]
# One-command experiment runner (see docs/experiment_framework.md).
gtl = "gtl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gtl"]

# --------------------------------------------------------------------------- #
# Tooling configuration. We keep it all here so there is a single source of
# truth for how the project is linted, typed, and tested.
# --------------------------------------------------------------------------- #

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "papers"]

[tool.ruff.lint]
# Explicit over implicit. We opt into a broad-but-curated rule set rather than
# a giant `select = ["ALL"]` that fights every design decision.
select = [
    "E", "F", "W",   # pyflakes / pycodestyle
    "I",             # isort
    "N",             # pep8-naming
    "UP",            # pyupgrade
    "B",             # bugbear
    "SIM",           # simplification
    "NPY",           # numpy-specific correctness
    "RUF",
]
ignore = [
    "N803",  # allow single-capital math-notation arg names (payoff matrix A, B)
    "N806",  # allow single-capital local math-notation names inside functions
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
disallow_any_generics = true
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = ["matplotlib.*", "yaml.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests", "papers"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "slow: marks tests that run long simulations (deselect with '-m \"not slow\"')",
    "reproduction: marks tests that reproduce a specific figure or table from a paper",
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:", "raise NotImplementedError"]
